# master

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
docs/source/: FPVsimulation.lake.rst  FPVsimulation.pvmodel.rst  FPVsimulation.pvsystem.rst  FPVsimulation.simulation.rst  FPVsimulation.soiling_loss_NS3031.rst  conf.py  index.rst
examples/: annual_energy_estimation_multiple_lakes.ipynb  energy_estimation.ipynb  mothly_avg_day_profile.ipynb
src/: IAM_curve.ipynb
src/FPVsimulation/: __init__.py  lake.py  pvmodel.py  pvsystem.py  simulation.py  soiling_loss_NS3031.py
src/areaSelection/: area_selection.ipynb
