# Originally taken from Hans Ekkehard Plesser's RandVis Project
# https://gitlab.com/nmbu.no/emner/inf200/h2021/inf200-course-materials/-/tree/main/june_block/examples/randvis_project

# Metadata: Information about the package, used by package managers.
[metadata]
name = master

# Obtain version and author info from package,
# usually defined in __init__.py
version = attr: FPVsimulation.__version__
author = attr: FPVsimulation.__author__
author_email = attr: FPVsimulation.__email__

# Provide description, long version picked up from file.
description = A simulation of animals on an island, with visualisation
long_description = file: README.md
long_description_content_type = text/markdown

# Homepage for package and specific URLs
url = https://github.com/metteLie/master
# License information
license = MIT License

# Classifiers, for options, see https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

# More information about requirements
[options]
# Python version required
python_requires = >=3.8

# Other packages required (eg numpy, pandas, ...)
# Do NOT list packages from the Python Standard Library
#    https://docs.python.org/3.9/library/index.html
install_requires =
    geopandas
    shapely
    pandas
    numpy
    matplotlib
    pvlib
    requests

# Which packages to include: tell packaging mechanism to search in src
package_dir =
    = src
packages = find:

# Scripts to also include in distribution package
scripts =
    examples/annual_energy_estimation_multiple_lakes.ipynb
    examples/energy_estimation.ipynb

# Tell package-finding mechanism where to search
[options.packages.find]
where = src


